--- a/Milestone2/Milestone2.csproj
+++ b/Milestone2/Milestone2.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InventoryManager.cs" />
     <Compile Include="ProductInventory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
